--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "blog": "file:",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
